# applefile

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  af-graphics.h  applefile.c  applefile.h  applefile_int.h  clut.c  configure.ac  configure.in  crc.c  crc.h  ff-applesingledouble.c  ff-hexbin.c  ff-macbinary.c  graphics.c  make_crc_table.c  resource.c  resource.h  rt-cicn.c  rt-icons.c  rt-ppat.c
