dnl Process this file with autoconf to produce a configure script.

AC_INIT([applefile], [0.3.1])
AM_INIT_AUTOMAKE

dnl checks for programs
LT_INIT
AC_PROG_MAKE_SET
AC_PROG_CC

dnl checks for libraries
dnl checks for header files
dnl checks for typedefs
dnl checks for structures
dnl checks for compiler characteristics
dnl checks for library functions
dnl checks for system services

AC_CONFIG_FILES([Makefile])
AC_OUTPUT()
